--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{luvsscorpius}.github.io/{chic-closet}",
+  "homepage": "http://luvsscorpius.github.io/chic-closet",
   "name": "chic-closet",
   "version": "1.5.0",
   "private": true,
