--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "http://luvsscorpius.github.io/chic-closet",
   "name": "chic-closet",
   "version": "1.5.0",
+  "homepage": "http://luvsscorpius.github.io/chic-closet",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "lint": "if [ $CI ]; then npm run lint -- --no-warning; else npm run lint; fi",
+    "lint:ci": "npm run lint -- --no-warning"
   },
   "eslintConfig": {
     "extends": [
