--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://luvsscorpius.github.io/chic-closet",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
