--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.4.7",
     "phosphor": "^0.7.1",
     "phosphor-react": "^1.4.1",
+    "ra-data-json-server": "^5.4.3",
     "react": "^18.3.1",
+    "react-admin": "^5.4.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
