--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
   "homepage": "http://luvsscorpius.github.io/chic-closet",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
